// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deciding Landing Page renders the login page when user is not logged in 1`] = `
<Redirect
  push={false}
  to="/login"
/>
`;

exports[`Deciding Landing Page renders the order list when user is logged in 1`] = `
<Redirect
  push={false}
  to="/my_orders"
/>
`;
